--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>💘</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <div class="img">
-      <img src="" alt="" />
-    </div>
+    <img class="image1 glow wiggle" src="./src/xyizko.jpg" alt="" />
+    <video autoplay loop muted class="backgroundVideo">
+      <source src="./src/v.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
     <div class="text">
-      <h1>Test</h1>
+      <h1></h1>
     </div>
   </body>
-  <script type="module" src="script.js"></script>
+  <script type="module" src="src/script.js"></script>
 </html>
