--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ _________________¶111111¶¶_____________¶¶¶¶¶¶_____ -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>💘</title>
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="icon" type="image/jpg" href="./src/xyizko.jpg" />
   </head>
   <body>
     <img class="image1 glow wiggle" src="./src/xyizko.jpg" alt="" />
