--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@ _________________¶111111¶¶_____________¶¶¶¶¶¶_____ -->
     <title>💘</title>
     <link rel="stylesheet" href="src/style.css" />
     <link rel="icon" type="image/jpg" href="./src/xyizko.jpg" />
+
+    <!-- OG Section -->
+    <meta property="og:image" content="./src/tmp1.jpg" />
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="1024" />
+    <!-- OG Section End -->
   </head>
   <body>
     <img class="image1 glow wiggle" src="./src/xyizko.jpg" alt="" />
