--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ _________________¶111111¶¶_____________¶¶¶¶¶¶_____ -->
     <div class="text">
       <h1></h1>
     </div>
-    <div class="modal hidden glow">
+    <div class="modal hidden">
       <div class="vid">
         <video autoplay controls>
           <source src="./src/m1.mp4" type="video/webm" />
