--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@ _________________¶111111¶¶_____________¶¶¶¶¶¶_____ -->
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="1024" />
     <!-- OG Section End -->
-    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"
+    ></script>
   </head>
   <body>
     <img
